Fix sidebar visibility

--- a/src/App/css/media.css
+++ b/src/App/css/media.css
@@ -24,6 +24,11 @@
   .sidebar-display {
     flex: 3
   }
+
+  .sidebar {
+    width: 0;
+    overflow: hidden;
+  }
 }
 
 /* Medium Devices, Desktops */
